--- a/index.htm
+++ b/index.htm
@@ -1,8 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
   </head>
-  <body>
-    <t>Hello lol</t>
+  <body style="margin:0;padding:0">
+
+    <div id="all" style="width: inherit; height: 100%">
+
+      <div id="leftpane" style="background-color: #FFF; width: 80%; height: inherit; position: absolute; margin-right: 20%">
+        <h1 style="text-align: center">EATENSTUFF</h1>
+      </div>
+
+      <div id="rightpane" style="background-color: #000; color: #FFF; width: 20%; height: inherit; position: absolute; margin-left: 80%">
+        <h1 style="text-align: center">GOALS</h1>
+      </div>
+
+    </div>
+
   </body>
 </html>
